k8s/oidc-aws/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spire-ingress
  namespace: spire
spec:
  tls:
    - hosts:
        - oidc-discovery.naveensrinivasan.com
      secretName: oidc-secret
  rules:
    - host: oidc-discovery.naveensrinivasan.com
      http:
        paths:
          - path: /.well-known/openid-configuration
            backend:
              serviceName: spire-oidc
              servicePort: 443
          - path: /keys
            backend:
              serviceName: spire-oidc
              servicePort: 443
